<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cameras</name>
  <version>0.0.1</version>
  <description>ROS 2 package for publishing camera feeds and calibration data.</description>
  <maintainer email="ryandash@cmail.carleton.ca">ryandash</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>opencv</depend> 
  <depend>my_opencv_package</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
